--- a/src/assets/styles/login.scss
+++ b/src/assets/styles/login.scss
@@ -37,13 +37,14 @@
       flex-direction: column;
       padding: 1rem;
       max-width: 380px;
-      width: 98%;
+      width: 90%;
       margin: auto;
 
       h1 {
         font-weight: bold;
         text-align: center;
-        margin-bottom: 10px;
+        margin: 0.5rem 0;
+        font-size: 1.2rem;
       }
 
       .form-control {
@@ -122,10 +123,18 @@
       flex-basis: 140px;
 
       form {
-        width: 50%;
+        min-width: 300px;
+        max-width: 500px;
+        width: 30%;
         margin: auto;
         max-width: 400px;
         min-width: 320px;
+
+        h1 {
+          margin-bottom: 0;
+          font-size: 1.4rem;
+          margin: 0.5rem 0;
+        }
         .form-control {
           margin: 8px 0;
           label {
@@ -165,14 +174,14 @@
       flex: 1;
 
       form {
-        width: 35%;
-
+        min-width: 350px;
+        max-width: 500px;
+        width: 28%;
         h1 {
-          font-size: 25px;
+          font-size: 1.65rem;
           text-align: center;
           display: block;
           margin-top: 0.5rem;
-          font-size: 2em;
           margin-block-start: 0.67em;
           margin-block-end: 0.67em;
           margin-inline-start: 0px;
