[UPDATE] added delete feature

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -315,8 +315,8 @@ html {
   flex-direction: column;
   height: 200px;
   .loading-component {
-    height: 50px;
-    width: 50px;
+    height: 2.5rem;
+    width: 2.5rem;
   }
   p {
     margin-top: 1rem;
