--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -182,6 +182,10 @@ html {
       text-overflow: ellipsis;
       white-space: nowrap;
     }
+    span.close {
+      font-size: 1.75rem;
+      cursor: pointer;
+    }
   }
   .ema-btn {
     display: flex;
@@ -305,7 +309,28 @@ html {
     width: 100%;
   }
 }
+.ema-loading-component {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  flex-direction: column;
 
+  .loading-light,
+  .loading-primary {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  p {
+    margin-top: 1rem;
+    margin-bottom: 0;
+  }
+}
 .ema-add-radios {
   display: flex;
   flex-wrap: wrap;
