[UPDATE] added profile page and users retrieval

--- a/src/assets/styles/login.scss
+++ b/src/assets/styles/login.scss
@@ -97,8 +97,14 @@
         height: 40px;
         outline-width: 0;
 
-        img {
-          height: 40px;
+        .loading {
+          width: 100%;
+          height: inherit;
+
+          i {
+            width: 1.5rem;
+            height: 1.5rem;
+          }
         }
       }
     }
