--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -12,6 +12,9 @@ html {
 html {
   overflow-y: auto !important;
 }
+input{
+  font-family: inherit
+}
 
 #catholic-app {
   font-family: "Roboto Slab", "Times New Roman", Times, serif, serif;
@@ -132,6 +135,11 @@ html {
     justify-content: start;
     align-items: center;
   }
+  .flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .ema-header {
     display: flex;
     padding: 0.25rem;
@@ -152,6 +160,7 @@ html {
       margin-bottom: 0;
       flex: 1;
     }
+    
     .field {
       margin-bottom: 0;
       margin: 0 1rem;
@@ -389,6 +398,22 @@ html {
   border-color: #dbdbdb;
   box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
   color: inherit;
+}
+
+.ema-scrollBar{
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #777777;
+    outline: 1px solid slategrey;
+    border-radius: 2px;
+  }
 }
 
 @import "./login.scss";
