--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -131,6 +131,10 @@ button {
   .mb-3 {
     margin-bottom: 1rem;
   }
+  .my-3 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
   .w-100 {
     width: 100%;
   }
