[UPDATE] added testimonial requests page and fixed studies creation error

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -13,6 +13,9 @@ input,
 button {
   font-family: inherit;
 }
+li {
+  list-style: none;
+}
 
 #catholic-app {
   font-family: "Roboto Slab", "Times New Roman", Times, serif, serif;
