added edit password page

--- a/src/assets/styles/_resets.scss
+++ b/src/assets/styles/_resets.scss
@@ -54,3 +54,10 @@ $link-focus-border: $primary;
   -webkit-font-smoothing: antialiased !important;
   -moz-osx-font-smoothing: grayscale !important;
 }
+input,
+button {
+  font-family: inherit;
+  &::placeholder {
+    font-family: inherit;
+  }
+}
