--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -213,7 +213,7 @@ li {
 }
 .iziToast {
   border-radius: 1px !important;
-  font-family: "Roboto Slab", Helvetica, Arial, serif !important;
+  font-family: "Roboto Slab", "Times New Roman", Times, serif !important;
   &::after {
     box-shadow: 0 5px 10px 0 rgba(32, 33, 36, 0.46) !important;
     border-radius: 1px !important;
