--- a/src/assets/styles/login.scss
+++ b/src/assets/styles/login.scss
@@ -53,7 +53,7 @@
         margin: 6px 0;
 
         input {
-          font-family: "Roboto Slab", Helvetica, Arial, serif;
+          font-family: "Roboto Slab", "Times New Roman", Times, serif;
           font-weight: 300;
           letter-spacing: 1px;
           padding: 0.5rem;
@@ -85,7 +85,7 @@
       }
 
       .loginBtn {
-        font-family: "Roboto Slab", Helvetica, Arial, serif;
+        font-family: "Roboto Slab", "Times New Roman", Times, serif;
         font-weight: 400;
         font-size: 17px;
         margin-top: 1rem;
